[gd_scene format=3 uid="uid://bj3se88mjc5jq"]

[ext_resource type="Script" uid="uid://bfnq7rbn1dgdo" path="res://scripts/portal.gd" id="1_1ffj6"]
[ext_resource type="Texture2D" uid="uid://04cis05t8271" path="res://assets/sprites/coin.png" id="2_jr6l0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d4jfq"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dyed0"]
atlas = ExtResource("2_jr6l0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ffj6"]
atlas = ExtResource("2_jr6l0")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5sgc"]
atlas = ExtResource("2_jr6l0")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr6l0"]
atlas = ExtResource("2_jr6l0")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f7pif"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyed0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ffj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5sgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr6l0")
}],
"loop": true,
"name": &"rotate",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_1ffj6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jr6l0"]
resource_name = "transition"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(20, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.566371]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4jfq"]
_data = {
&"RESET": SubResource("Animation_1ffj6"),
&"transition": SubResource("Animation_jr6l0")
}

[node name="Portal" type="Area2D" unique_id=1649502480]
collision_mask = 2
script = ExtResource("1_1ffj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=496765908]
shape = SubResource("CircleShape2D_d4jfq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=294470907]
modulate = Color(0.43924478, 0.99251634, 0.83548766, 1)
self_modulate = Color(4.031642, 16.990576, 15.581995, 1)
scale = Vector2(2.005, 2.005)
sprite_frames = SubResource("SpriteFrames_f7pif")
animation = &"rotate"
autoplay = "rotate"
speed_scale = 0.6

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1684058077]
process_mode = 3
libraries/ = SubResource("AnimationLibrary_d4jfq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
